src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>ChiamateAnnuali__c</fullName>
        <label>Chiamate Annuali</label>
        <summarizedField>Contratto__c.ChiamateAnnuali__c</summarizedField>
        <summaryForeignKey>Contratto__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChiamateEffettuateSandbox__c</fullName>
        <label>Chiamate Effettuate Sandbox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChiamateMensiliRimanenti__c</fullName>
        <formula>LimiteChiamateMensiliTotali__c +  DeltaChiamateMensili__c - ChiamateMensili__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chiamate Mensili Rimanenti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChiamateMensili__c</fullName>
        <label>Chiamate Mensili</label>
        <summarizedField>Contratto__c.ChiamateMensili__c</summarizedField>
        <summaryForeignKey>Contratto__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChiamateRimanentiSandbox__c</fullName>
        <formula>LimiteChiamateSandbox__c - ChiamateEffettuateSandbox__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chiamate Rimanenti Sandbox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChiamateTotali__c</fullName>
        <label>Chiamate Totali</label>
        <summarizedField>Contratto__c.ChiamateTotali__c</summarizedField>
        <summaryForeignKey>Contratto__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeltaChiamateMensili__c</fullName>
        <label>Delta Chiamate Mensili</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IdOrgCliente__c</fullName>
        <label>Id Org Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LimiteChiamateMensiliTotali__c</fullName>
        <label>Limite Chiamate Mensili Totali</label>
        <summarizedField>Contratto__c.LimiteChiamateMensiliTotali__c</summarizedField>
        <summaryForeignKey>Contratto__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LimiteChiamateSandbox__c</fullName>
        <label>Limite Chiamate Sandbox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>